--- a/GatewayApi/GatewayApi-dev.properties
+++ b/GatewayApi/GatewayApi-dev.properties
@@ -1,4 +1,5 @@
-server.port=20001
-spring.application.name=GatewayApi
-eureka.client.service-url.defaultZone=http://localhost:20000/eureka/
-feign.hystrix.enabled=true
+zuul.routes.feign-consumer.path=/feign-consumer/**
+zuul.routes.feign-consumer.serviceId=feign-consumer
+ 
+zuul.routes.feign-consumer-hello.path=/feign-consumer/hello/**
+zuul.routes.feign-consumer-hello.serviceId=feign-consumer-hello
