--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -17,7 +17,7 @@ server:
   jpa:
     database:MYSQL
     show-sql:true
-    hibernate.ddl-auto:validate
+    hibernate.ddl-auto:update
     naming-strategy:org.hibernate.cfg.ImprovedNamingStrategy
     spring.jpa.properties.hibernate.dialect:org.hibernate.dialect.MySQL5Dialect
     open-in-view:true
