--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -15,12 +15,11 @@ server:
         idle-timeout: 10000
         maximumPoolSize: 30
   jpa:
-    database:MYSQL
-    show-sql:true
-    hibernate.ddl-auto:update
-    naming-strategy:org.hibernate.cfg.ImprovedNamingStrategy
-    spring.jpa.properties.hibernate.dialect:org.hibernate.dialect.MySQL5Dialect
-    open-in-view:true
+    database: MYSQL
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+    show-sql: true
+    hibernate: 
+      ddl-auto: update
 security:
   oauth2:
     clientId: cloud
