--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -8,7 +8,7 @@ server:
   datasource:
     url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
-    password: "root"
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
         minIdle: 10
