--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -14,7 +14,7 @@ spring:
     maximumPoolSize: 30
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       naming:
         strategy: org.hibernate.cfg.ImprovedNamingStrategy
     properties:
