--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -1,8 +1,10 @@
-server:
-  port: 5004
-
-
 spring:
+ application:
+  name: cloud-author
+  
+server:
+  port: 5005
+
   datasource:
     url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
