--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -1,8 +1,10 @@
-
+spring:
+ application:
+  name: cloud-account
   
 server:
   port: 5005
-spring:
+
   datasource:
     url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
