--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -1,7 +1,11 @@
 
-server:
-  port: 5005
 spring:
+ application:
+  name: cloud-account
+  
+server:
+  port: 5004
+  
   datasource:
     url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
