--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -1,22 +1,27 @@
+pring:
+ application:
+  name: cloud-account
 
- 
-  
 server:
-  port: 5005
+  port: 5004
+
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
-    hikari:
-        minIdle: 10
-        idle-timeout: 10000
-        maximumPoolSize: 30
+  hikari:
+    minIdle: 10
+    idle-timeout: 10000
+    maximumPoolSize: 30
   jpa:
-    database: MYSQL
-    database-platform: org.hibernate.dialect.MySQL5Dialect
+    hibernate:
+      ddl-auto: update
+      naming:
+        strategy: org.hibernate.cfg.ImprovedNamingStrategy
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
     show-sql: true
-    hibernate: 
-    ddl-auto: update
-
