--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -4,6 +4,8 @@ server:
 
 
 spring:
+  application:
+    name:cloud-account
   datasource:
     url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
