--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -6,7 +6,7 @@ server:
   port: 5004
 
   datasource:
-    url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+    url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=true
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
