--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -22,3 +22,5 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
     show-sql: true
+  application:
+      name:cloud-account
