--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -5,7 +5,16 @@ spring:
 server:
   port: 5005
   
- 
+ atasource:
+    url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
+    hikari:
+        minIdle: 10
+        idle-timeout: 10000
+        maximumPoolSize: 30
+
 security:
   oauth2:
     clientId: cloud
