--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -5,7 +5,7 @@ spring:
 server:
   port: 5005
   
- datasource:
+  datasource:
     url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
     username: root
     password: root
@@ -14,6 +14,13 @@ server:
         minIdle: 10
         idle-timeout: 10000
         maximumPoolSize: 30
+  jpa:
+    database: MYSQL
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+    show-sql: true
+    hibernate: 
+    ddl-auto: update
+
 
 
 security:
