--- a/GatewayApi/GatewayApi-dev.yml
+++ b/GatewayApi/GatewayApi-dev.yml
@@ -38,3 +38,5 @@ security:
       service-id: cloud-gateway
   excludeUrls: 
     - /api/auth/**
+
+logging.level.org.springframework.security: TRACE
