--- a/GatewayApi/GatewayApi-dev.yml
+++ b/GatewayApi/GatewayApi-dev.yml
@@ -33,7 +33,8 @@ security:
   oauth2:
     resource:
       loadBalanced: true # 负载均衡
-      user-info-uri: http://localhost/user
+      user-info-uri: http://localhost:5005/user
+      token-info-uri: http://localhost:5005/oauth/check_token
       prefer-token-info: false
       service-id: cloud-gateway
   excludeUrls: 
