--- a/GatewayApi/GatewayApi-dev.yml
+++ b/GatewayApi/GatewayApi-dev.yml
@@ -33,8 +33,8 @@ security:
   oauth2:
     resource:
       loadBalanced: true # 负载均衡
-      token-info-uri: http://127.0.0.1:5005/oauth/check_token
-      user-info-uri: http://127.0.0.1:5005/user
+      token-info-uri: http://cloud-author/oauth/check_token
+      user-info-uri: http://cloud-author/user
       prefer-token-info: false
       service-id: cloud-gateway
   excludeUrls: 
