--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -11,9 +11,11 @@ persistence:
       url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=utf8&useSSL=false
       username: root
       password: root
-mybatis-plus.global-config.id-type:0
-mybatis-plus.global-config.dbColumnUnderline:true
-mybatis-plus.global-config.isCapitalMode:true
+mybatis-plus:
+  global-config:
+    id-type:0
+    dbColumnUnderline:true
+    isCapitalMode:true
  
 
 logging.level.org.springframework.security: DEBUG
