--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -1,4 +1,4 @@
-server:
+wwserver:
   port: 5004
 spring:
   application:
@@ -11,21 +11,25 @@ persistence:
       url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=utf8&useSSL=false
       username: root
       password: root
- 
-mybatis-plus:
-  mapper-locations: classpath:/mapper/*Mapper.xml
+    druid：
+    initialSize：10
+    minIdle=6
+    maxActive：50
+    maxWait：60000
+    timeBetweenEvictionRunsMillis：60000
+    minEvictableIdleTimeMillis：300000
+    validationQuery=SELECT 'x'
+    testWhileIdle：true
+    testOnBorrow：false
+    testOnReturn：false
+    poolPreparedStatements：false
+    maxPoolPreparedStatementPerConnectionSize：20
+    filters：wall,stat
+  plusConfig:
+    idType:0
+    dbColumnUnderline:true
+    isCapitalMode:true
 
-
-  global-config:
-    id-type: 0  #0:数据库ID自增   1:用户输入id  2:全局唯一id(IdWorker)  3:全局唯一ID(uuid)
-    db-column-underline: false
-    refresh-mapper: true
-  configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: true #配置的缓存的全局开关
-    lazyLoadingEnabled: true #延时加载的开关
-    multipleResultSetsEnabled: true #开启的话，延时加载一个属性时会加载该对象全部属性，否则按需加载属性
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #打印sql语句,调试用
 
 
 logging.level.org.springframework.security: DEBUG
