--- a/account/account-dev.yml
+++ b/account/account-dev.yml
@@ -11,5 +11,11 @@ persistence:
       url: jdbc:mysql://localhost:3306/mxcg_cloud?useUnicode=true&characterEncoding=utf8&useSSL=false
       username: root
       password: root
-  
+mybatis-plus:
+    mapper-locations:mapper/*.xml
+    configuration:
+        use-column-label:true
+        auto-mapping-behavior:full
+        map-underscore-to-camel-case:true
+
 logging.level.org.springframework.security: DEBUG
