--- a/GatewayApi/GatewayApi-dev.yml
+++ b/GatewayApi/GatewayApi-dev.yml
@@ -13,7 +13,7 @@ zuul:
   # 路由转发规则
   routes:
     cloud-account:
-      path: /uc/**
+      path: /uc/uc/**
       sensitiveHeaders:
       service-id: cloud-account
     cloud-author:
