--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -5,7 +5,13 @@ spring:
 server:
   port: 5005
 
-
+spring:
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root
+    url: jdbc:mysql://localhost:3306/zoucloud?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
 
 logging.level.org.springframework.security: DEBUG
 security:
