--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -7,11 +7,10 @@ server:
 
 spring:
   datasource:
-    type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/zoucloud?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost/zoucloud?useSSL=false&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 
 logging.level.org.springframework.security: DEBUG
 security:
