--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -1,16 +1,17 @@
 spring:
  application:
   name: cloud-author
-  datasource:
-  url: jdbc:mysql://localhost:3306/zoucloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-  username: root
-  password: root
-  driver-class-name: com.mysql.jdbc.Driver
- hikari:
-  minIdle: 10
-  idle-timeout: 10000
-  maximumPoolSize: 30
+  
   
 server:
   port: 5005
+  
+  spring:
+  	datasource:
+  		url: jdbc:mysql://localhost:3306/zoucloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+  	username: root
+  	password: root
+  	driver-class-name: com.mysql.jdbc.Driver
+
+
 logging.level.org.springframework.security: DEBUG
