--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -1,18 +1,15 @@
-server:
-  port: 5005
 
 
 spring:
   datasource:
-  url: jdbc:mysql://localhost:3306/zoucloud?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-  username: root
-  password: root
-  driver-class-name: com.mysql.jdbc.Driver
- hikari:
-  minIdle: 10
-  idle-timeout: 10000
-  maximumPoolSize: 30
+    url:jdbc:mysql://localhost/zoucloud?useSSL=false&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username:root
+    password:root
+    driver-class-name:com.mysql.cj.jdbc.Driver
+    hikari:
+      connection-timeout:60000
+      maximum-pool-size:5
   
 
 
-logging.level.org.springframework.security: DEBUG
+logging.level.org.springframework.security: TRACE
