--- a/author/author-dev.yml
+++ b/author/author-dev.yml
@@ -1,5 +1,6 @@
 spring:
   datasource:
+    type: com.zaxxer.hikari.HikariDataSource
     url:jdbc:mysql://localhost/zoucloud?useSSL=false&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username:root
     password:root
